fixed cut off shapes with body height

--- a/src/css/sass/_global.sass
+++ b/src/css/sass/_global.sass
@@ -29,6 +29,8 @@ body
 	overflow-x: hidden
 	position: relative
 	background: var(--c-bg)
+	height: 100%
+
 main
 	padding-top: 20px
 
